Tests: fix WrapperTest